Fix timing of animation finished event and promise.

Previously a finished animation would fire the finished event on the next animation tick.  This is not to specification, as the finished event should trigger immediately (https://drafts.csswg.org/web-animations/#finishing-an-animation-section).

The discrepancy with the spec manifested as test failures when the state of an animation is updated after finishing. In some cases, the animation no longer registers as finished at the time of the next tick and the finished event is dropped.

Bug: 772060, 772048, 771977
Change-Id: Ie4161face4e6d5ed9b07bee86fef68b718233d41
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1572803
Reviewed-by: Stephen McGruer <smcgruer@chromium.org>
Commit-Queue: Kevin Ellis <kevers@chromium.org>
Cr-Commit-Position: refs/heads/master@{#653584}

Former-commit-id: c48e746aec57fa10ae3905fff77c536d0c2d361d